fix: remove contrast

--- a/components/Navbar/Navbar.module.scss
+++ b/components/Navbar/Navbar.module.scss
@@ -2,12 +2,11 @@
 
 .header {
     background-color: rgba($black0, 0.7);
-    // filter: blur(0.6);
     display: flex;
     backdrop-filter: blur(5px);
     -webkit-backdrop-filter: blur(5px);
-    -moz-backdrop-filter: blur(5px) contrast(60%);
-    -ms-backdrop-filter: blur(5px) contrast(60%);;
+    -moz-backdrop-filter: blur(5px);
+    -ms-backdrop-filter: blur(5px);;
     justify-content: space-around;
     align-items: center;
     height: 4rem;
